force-app/main/default/objects/Inspection__c/Inspection__c.object-meta.xml
<CustomObject>
    <label>Inspection</label>
    <nameField>
        <label>Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>