force-app/main/default/objects/Inspection__c/fields/Deposit_Withheld__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Withheld__c</fullName>
    <label>Deposit Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>